--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "tower",
   "version": "1.0.0",
   "scripts": {
-    "dev": "vite build --watch",
+    "dev": "vite",
     "build": "vite build --minify",
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/node": "^24.3.0",
+    "typescript": "^5.9.2",
     "vite": "^5.4.10"
   },
   "dependencies": {
