--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "devDependencies": {
     "@types/node": "^24.3.0",
+    "@types/three": "^0.179.0",
     "typescript": "^5.9.2",
     "vite": "^5.4.10"
   },
