--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "vite": "^5.4.10"
   },
   "dependencies": {
+    "cannon-es": "^0.20.0",
     "gsap": "^3.13.0",
     "three": "^0.170.0"
   }
