--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "cannon-es": "^0.20.0",
     "gsap": "^3.13.0",
+    "howler": "^2.2.4",
     "three": "^0.170.0"
   }
 }
